# nessus-security-re-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: NASL_INSTRUCTION_SET.md  NBIN_DECOMPILER_FLOW.md  notes.md
nbin_tools/: __init__.py  analyze_opcodes.py  cli.py  nasl_decompiler.py  nasl_vm.py
skills/: nbin.md
